@@ -1,2 +1,0 @@
-`as.array` <- function (x, ...)
-    UseMethod("as.array")
