@@ -1,2 +1,0 @@
-xtab.mefa <- function(x, ...)
-    x$xtab
